# sparrow-resnet50-retinanet

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  cookiecutter-config-file.yml  main.py  pyproject.toml
.devcontainer/: .env.example  devcontainer.json
.dvc/: config
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
data/dataset/: .gitignore  annotations.dvc  images.dvc  predictions.dvc
data/models/: .gitignore  model.pth.dvc  pretrained.pth.dvc
docker/: Dockerfile  README.md
sparrow_resnet50_retinanet/: __init__.py  config.py  config_test.py  dataset.py  dataset_test.py  evaluate.py  inference.py  labels.py  model.py  model_test.py  train.py  types.py  utils.py
